--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
+	jcenter()
 	mavenCentral()
 }
 
@@ -16,8 +17,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile 'org.junit.jupiter:junit-jupiter-api'
 	annotationProcessor 'org.projectlombok:lombok'
 	compile('org.projectlombok:lombok')
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
