--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	compile('org.projectlombok:lombok')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testCompile group: 'junit', name: 'junit', version: '4.4'
 }
 
 test {
