--- a/build.gradle
+++ b/build.gradle
@@ -14,16 +14,13 @@ repositories {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	compile 'org.junit.jupiter:junit-jupiter-api'
 	annotationProcessor 'org.projectlombok:lombok'
 	compile('org.projectlombok:lombok')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testCompile group: 'junit', name: 'junit', version: '4.4'
-}
+	compile 'mysql:mysql-connector-java'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-test {
-	useJUnitPlatform()
 }
