--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
-spring.datasource.username=kodilla
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:mysql://localhost:3306/kodilla_library?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.username=emilia_user
+spring.datasource.password=Ltracz01!
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
