--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,7 @@ dependencies {
 	compile 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+
 }
