--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,16 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	compile('org.projectlombok:lombok')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compile 'mysql:mysql-connector-java'
+//	compile 'mysql:mysql-connector-java'
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	compile group: 'io.github.jhipster', name: 'jhipster', version: '1.3.1'
+	compile group: 'io.github.jhipster', name: 'jhipster-framework', version: '3.5.0'
+
+
 
 }
