--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+	testImplementation.exclude group: 'com.vaadin.external.google', module: 'android-json'
+}
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
